<resources>
    <string name="app_name">Favorite List Application</string>
    <string name="title_fav_list">FavList</string>
    <string name="title_fav_register">FavRegister</string>
    <string name="title_fav_image_list">FavImageList</string>
    <string name="title_fav_image_register">FavImageRegister</string>
    <string name="title_special_day">SpecialDay</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_anniversary">Anniversary</string>
    <string name="desc_fab_add">Fabを増やす</string>
    <string name="desc_fab_person_register">推し登録画面へ</string>
    <string name="desc_fab_image_register">推し画像登録画面へ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FavRegister -->
    <string name="item_fav_icon">推しのアイコン</string>
    <string name="item_fav_name">推しの名前</string>
    <string name="item_fav_birthday">推しの誕生日</string>
    <string name="item_fav_anniversary">推しはじめた日</string>
    <string name="hint_fav_name">あなたの推しの名前を入力</string>
    <string name="hint_fav_birthday">あなたの推しの誕生日を登録</string>
    <string name="hint_fav_anniversary">あなたの推しの記念日を登録</string>

</resources>